Fix flick keyboard alignment using CSS Grid

--- a/public/style.css
+++ b/public/style.css
@@ -528,7 +528,7 @@ h2.section-title {
     border: none;
     box-shadow: 0 4px 6px rgba(0,0,0,0.2);
     transition: background-color 0.1s ease;
-    margin-bottom: -30px;
+    margin-bottom: -200px;
 }
 
 #submit-btn:active {
